crates/kirin-derive-core/src/builder/snapshots/kirin_derive_core__builder__tests__constant.snap
---
source: crates/kirin-derive-core/src/builder/mod.rs
expression: generate(&input)
---
impl<T: CompileTimeValue + Typeof<L>, L: TypeLattice> Constant<T, L> {
    pub fn new<Lang: Language + From<Constant<T, L>>>(
        arena: &mut Arena<Lang>,
        value: impl Into<T>,
    ) -> ConstantNewRef
    where
        Lang::TypeLattice: From<L>,
    {
        let constant_statement_id = arena.new_statement_id();
        let value = value.into();
        let marker = std::marker::PhantomData;
        let result: ResultValue = arena
            .ssa()
            .kind(SSAKind::Result(constant_statement_id, 1usize))
            .ty(Lang::TypeLattice::from(value.type_of()))
            .new()
            .into();
        let constant_statement = arena
            .statement()
            .definition(Self {
                value,
                result,
                marker,
            })
            .new();
        ConstantNewRef {
            id: constant_statement_id,
            result,
        }
    }
}
pub struct ConstantNewRef {
    pub id: StatementId,
    pub result: &ResultValue,
}
