crates/kirin-derive-core/src/builder/snapshots/kirin_derive_core__builder__tests__either_enum.snap
---
source: crates/kirin-derive-core/src/builder/mod.rs
expression: generate(&input)
---
impl EitherEnum {
    pub fn op_abc<Lang: Language + From<EitherEnum>>(
        context: &mut ::kirin::ir::Context<Lang>,
        value: impl Into<u32>,
    ) -> EitherEnumOpAbcRef
    where
        Lang::TypeLattice: From<SomeLattice>,
    {
        let either_enum_statement_id = context.new_statement_id();
        let value = value.into();
        let result: ::kirin::ir::ResultValue = context
            .ssa()
            .kind(SSAKind::Result(either_enum_statement_id, 0usize))
            .ty(Lang::TypeLattice::from(u32_type))
            .new()
            .into();
        let either_enum_statement = context
            .statement()
            .definition(EitherEnum::A { value, result })
            .new();
        EitherEnumOpAbcRef {
            id: either_enum_statement_id,
            result,
        }
    }
}
pub struct EitherEnumOpAbcRef {
    pub id: ::kirin::ir::StatementId,
    pub result: ::kirin::ir::ResultValue,
}
impl From<EitherEnumOpAbcRef> for ::kirin::ir::StatementId {
    fn from(value: EitherEnumOpAbcRef) -> Self {
        value.id
    }
}
