crates/kirin-derive-core/src/builder/snapshots/kirin_derive_core__builder__tests__regular_enum.snap
---
source: crates/kirin-derive-core/src/builder/mod.rs
expression: generate(&input)
---
impl TestEnum {
    pub fn op_a<Lang: Language + From<TestEnum>>(
        context: &mut ::kirin::ir::Context<Lang>,
        value: impl Into<u32>,
    ) -> TestEnumOpARef
    where
        Lang::TypeLattice: From<SomeLattice>,
    {
        let test_enum_statement_id = context.new_statement_id();
        let value = value.into();
        let result: ::kirin::ir::ResultValue = context
            .ssa()
            .kind(SSAKind::Result(test_enum_statement_id, 0usize))
            .ty(Lang::TypeLattice::from(u32_type))
            .new()
            .into();
        let test_enum_statement = context
            .statement()
            .definition(TestEnum::A { value, result })
            .new();
        TestEnumOpARef {
            id: test_enum_statement_id,
            result,
        }
    }
    pub fn op_b<Lang: Language + From<TestEnum>>(
        context: &mut ::kirin::ir::Context<Lang>,
        field_0: impl Into<u64>,
    ) -> TestEnumOpBRef
    where
        Lang::TypeLattice: From<SomeLattice>,
    {
        let test_enum_statement_id = context.new_statement_id();
        let field_0 = field_0.into();
        let result: ::kirin::ir::ResultValue = context
            .ssa()
            .kind(SSAKind::Result(test_enum_statement_id, 0usize))
            .ty(Lang::TypeLattice::from(u64_type))
            .new()
            .into();
        let test_enum_statement = context
            .statement()
            .definition(TestEnum::B(field_0, result))
            .new();
        TestEnumOpBRef {
            id: test_enum_statement_id,
            result,
        }
    }
}
pub struct TestEnumOpARef {
    pub id: ::kirin::ir::StatementId,
    pub result: ::kirin::ir::ResultValue,
}
impl From<TestEnumOpARef> for ::kirin::ir::StatementId {
    fn from(value: TestEnumOpARef) -> Self {
        value.id
    }
}
pub struct TestEnumOpBRef {
    pub id: ::kirin::ir::StatementId,
    pub result: ::kirin::ir::ResultValue,
}
impl From<TestEnumOpBRef> for ::kirin::ir::StatementId {
    fn from(value: TestEnumOpBRef) -> Self {
        value.id
    }
}
