crates/kirin-derive-core/src/builder/snapshots/kirin_derive_core__builder__tests__regular_named_struct.snap
---
source: crates/kirin-derive-core/src/builder/mod.rs
expression: generate(&input)
---
impl<T: CompileTimeValue + Typeof<L>, L: TypeLattice> Constant<T, L> {
    pub fn new<Lang: Language + From<Constant<T, L>>>(
        context: &mut ::kirin::ir::Context<Lang>,
        value: impl Into<T>,
    ) -> ConstantNewRef
    where
        Lang::TypeLattice: From<L>,
    {
        let constant_statement_id = context.new_statement_id();
        let value = value.into();
        let marker = std::marker::PhantomData;
        let result: ::kirin::ir::ResultValue = context
            .ssa()
            .kind(SSAKind::Result(constant_statement_id, 0usize))
            .ty(Lang::TypeLattice::from(value.type_of()))
            .new()
            .into();
        let constant_statement = context
            .statement()
            .definition(Self {
                value,
                result,
                marker,
            })
            .new();
        ConstantNewRef {
            id: constant_statement_id,
            result,
        }
    }
}
pub struct ConstantNewRef {
    pub id: ::kirin::ir::StatementId,
    pub result: ::kirin::ir::ResultValue,
}
impl From<ConstantNewRef> for ::kirin::ir::StatementId {
    fn from(value: ConstantNewRef) -> Self {
        value.id
    }
}
