crates/kirin-derive-core/src/builder/snapshots/kirin_derive_core__builder__tests__regular_struct_with_ssa.snap
---
source: crates/kirin-derive-core/src/builder/mod.rs
expression: generate(&input)
---
impl<T: CompileTimeValue + Typeof<L>, L: TypeLattice> TestStruct<T, L> {
    pub fn new<Lang: ::kirin::ir::Dialect + From<TestStruct<T, L>>>(
        context: &mut ::kirin::ir::Context<Lang>,
        value: impl Into<T>,
        input_ssa: impl Into<::kirin::ir::SSAValue>,
    ) -> TestStructNewRef
    where
        Lang::TypeLattice: From<L>,
    {
        let teststruct_statement_id = context.statement_arena().next_id();
        let value = value.into();
        let input_ssa: ::kirin::ir::SSAValue = input_ssa.into();
        let marker = std::marker::PhantomData;
        let result: ::kirin::ir::ResultValue = context
            .ssa()
            .kind(SSAKind::Result(teststruct_statement_id, 0usize))
            .ty(Lang::TypeLattice::from(value.type_of()))
            .new()
            .into();
        let teststruct_statement = context
            .statement()
            .definition(Self {
                value,
                result,
                input_ssa,
                marker,
            })
            .new();
        TestStructNewRef {
            id: teststruct_statement_id,
            result,
        }
    }
}
pub struct TestStructNewRef {
    pub id: ::kirin::ir::Statement,
    pub result: ::kirin::ir::ResultValue,
}
impl From<TestStructNewRef> for ::kirin::ir::Statement {
    fn from(value: TestStructNewRef) -> Self {
        value.id
    }
}
